--- a/styles/style.css
+++ b/styles/style.css
@@ -13,8 +13,13 @@ body {
 
 button {
   font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif;
+  background-color: #c05326;
+  color: white;
 }
-
+button:nth-of-type(2){
+  background-color: white;
+  color: black;
+}
 /* Navigation */
 
 .navbar-brand > img {
@@ -67,7 +72,7 @@ button {
 /* Jumbotron */
 
 .jumbotron {
-  background-image: url("../images/header.jpg");
+  background-image: url("../images/header-bike.jpg");
   border-radius: 0;
   color: #fff;
 }
@@ -82,6 +87,10 @@ button {
   font-size: 1rem;
   font-weight: 600;
   text-transform: uppercase;
+}
+
+.caja-articulo {
+  display: flex;
 }
 
 .heading-underline:before {
